--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\husky\eclipse-workspace\educational\testng.xml</span>
+                    <span>C:\Users\sydho\git\educational\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">11 methods,   11 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,57 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Base" hash-for-method="Startup(chrome)">Startup(chrome)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test1">test1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(StartDate, 04/01/2020)">test2(StartDate, 04/01/2020)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(StoreId, Your store name)">test2(StoreId, Your store name)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(ManufacturerId, Apple)">test2(ManufacturerId, Apple)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(BillingCountryId, Pakistan)">test2(BillingCountryId, Pakistan)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(VendorId, Vendor 2)">test2(VendorId, Vendor 2)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(CategoryId, Electronics &gt;&gt; Camera &amp; photo)">test2(CategoryId, Electronics >> Camera & photo)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(EndDate, 04/30/2020)">test2(EndDate, 04/30/2020)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(OrderStatusId, Processing)">test2(OrderStatusId, Processing)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test2(PaymentStatusId, Authorized)">test2(PaymentStatusId, Authorized)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="execution.Bestsellers" hash-for-method="test3">test3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,15 +170,93 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">execution.Base</span>
+              <span class="class-name">execution.Bestsellers</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Startup(chrome)">
-                  </a> <!-- Startup(chrome) -->
-                  <span class="method-name">Startup</span>
-                  <span class="parameters">(chrome)</span>
+                  <a name="test1">
+                  </a> <!-- test1 -->
+                  <span class="method-name">test1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(StartDate, 04/01/2020)">
+                  </a> <!-- test2(StartDate, 04/01/2020) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(StartDate, 04/01/2020)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(StoreId, Your store name)">
+                  </a> <!-- test2(StoreId, Your store name) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(StoreId, Your store name)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(ManufacturerId, Apple)">
+                  </a> <!-- test2(ManufacturerId, Apple) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(ManufacturerId, Apple)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(BillingCountryId, Pakistan)">
+                  </a> <!-- test2(BillingCountryId, Pakistan) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(BillingCountryId, Pakistan)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(VendorId, Vendor 2)">
+                  </a> <!-- test2(VendorId, Vendor 2) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(VendorId, Vendor 2)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(CategoryId, Electronics &gt;&gt; Camera &amp; photo)">
+                  </a> <!-- test2(CategoryId, Electronics >> Camera & photo) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(CategoryId, Electronics >> Camera & photo)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(EndDate, 04/30/2020)">
+                  </a> <!-- test2(EndDate, 04/30/2020) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(EndDate, 04/30/2020)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(OrderStatusId, Processing)">
+                  </a> <!-- test2(OrderStatusId, Processing) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(OrderStatusId, Processing)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test2(PaymentStatusId, Authorized)">
+                  </a> <!-- test2(PaymentStatusId, Authorized) -->
+                  <span class="method-name">test2</span>
+                  <span class="parameters">(PaymentStatusId, Authorized)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test3">
+                  </a> <!-- test3 -->
+                  <span class="method-name">test3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +264,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\husky\eclipse-workspace\educational\testng.xml</span>
+            <span class="header-content">C:\Users\sydho\git\educational\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +274,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;execution.Base&quot;/&gt;
+      &lt;class name=&quot;execution.Bestsellers&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -186,16 +314,56 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(11);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Startup')
-data.setCell(0, 2, 'execution.Base')
-data.setCell(0, 3, 13493);
+data.setCell(0, 1, 'test1')
+data.setCell(0, 2, 'execution.Bestsellers')
+data.setCell(0, 3, 1175);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'test3')
+data.setCell(1, 2, 'execution.Bestsellers')
+data.setCell(1, 3, 386);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'test2')
+data.setCell(2, 2, 'execution.Bestsellers')
+data.setCell(2, 3, 120);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'test2')
+data.setCell(3, 2, 'execution.Bestsellers')
+data.setCell(3, 3, 105);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'test2')
+data.setCell(4, 2, 'execution.Bestsellers')
+data.setCell(4, 3, 81);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'test2')
+data.setCell(5, 2, 'execution.Bestsellers')
+data.setCell(5, 3, 76);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'test2')
+data.setCell(6, 2, 'execution.Bestsellers')
+data.setCell(6, 3, 74);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'test2')
+data.setCell(7, 2, 'execution.Bestsellers')
+data.setCell(7, 3, 73);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'test2')
+data.setCell(8, 2, 'execution.Bestsellers')
+data.setCell(8, 3, 73);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'test2')
+data.setCell(9, 2, 'execution.Bestsellers')
+data.setCell(9, 3, 73);
+data.setCell(10, 0, 10)
+data.setCell(10, 1, 'test2')
+data.setCell(10, 2, 'execution.Bestsellers')
+data.setCell(10, 3, 72);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -221,11 +389,59 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">execution.Base</div> <!-- chronological-class-name -->
-              <div class="test-method">
+              <div class="chronological-class-name">execution.Bestsellers</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
                 <span class="method-name">Startup(chrome)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">test1</span>
+                <span class="method-start">13553 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(StartDate, 04/01/2020)</span>
+                <span class="method-start">14734 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(EndDate, 04/30/2020)</span>
+                <span class="method-start">14840 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(StoreId, Your store name)</span>
+                <span class="method-start">14960 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(OrderStatusId, Processing)</span>
+                <span class="method-start">15042 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(PaymentStatusId, Authorized)</span>
+                <span class="method-start">15114 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(CategoryId, Electronics >> Camera & photo)</span>
+                <span class="method-start">15189 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(ManufacturerId, Apple)</span>
+                <span class="method-start">15262 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(BillingCountryId, Pakistan)</span>
+                <span class="method-start">15339 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test2(VendorId, Vendor 2)</span>
+                <span class="method-start">15413 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test3</span>
+                <span class="method-start">15487 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">15874 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
