--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="c26598">  <td>20/04/23 22:06:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.teardown()[pri:0, instance:execution.Bestsellers@5d76b067]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test1()[pri:0, instance:execution.Bestsellers@5d76b067]">test1</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@5d76b067]">test2</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>20/04/23 22:06:10</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test3()[pri:0, instance:execution.Bestsellers@5d76b067]">test3</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
 </table>
