--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a679c">  <td>20/04/22 10:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.Startup(java.lang.String)[pri:0, instance:execution.Base@3224f60b]">Startup</td> 
-  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/04/23 22:07:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.Startup(java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">&gt;&gt;Startup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/04/23 22:07:47</td>   <td>15864</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.teardown()[pri:0, instance:execution.Bestsellers@4f063c0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:45</td>   <td>13543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test1()[pri:0, instance:execution.Bestsellers@4f063c0a]">test1</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>14724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>14830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>14950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>15032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>15104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>15179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:46</td>   <td>15252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:47</td>   <td>15329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:47</td>   <td>15403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 22:07:47</td>   <td>15477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test3()[pri:0, instance:execution.Bestsellers@4f063c0a]">test3</td> 
+  <td>main@352359770</td>   <td></td> </tr>
 </table>
