--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,2 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="9ad2e3">  <td>20/04/23 22:09:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerTest.withFirstSetOfData()[pri:1, instance:execution.CustomerTest@5db250b4]">withFirstSetOfData</td> 
+  <td>main@1007880005</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>20/04/23 22:09:04</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerTest.withSecondSetOfData()[pri:2, instance:execution.CustomerTest@5db250b4]">withSecondSetOfData</td> 
+  <td>main@1007880005</td>   <td></td> </tr>
+<tr bgcolor="9379b6">  <td>20/04/23 22:09:04</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterclass()[pri:0, instance:execution.CustomerTest@5db250b4]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
