--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a679c">  <td>20/04/22 10:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.Startup(java.lang.String)[pri:0, instance:execution.Base@3224f60b]">Startup</td> 
-  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>20/04/23 23:03:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.Startup(java.lang.String)[pri:0, instance:execution.CustomerTest@37918c79]">&gt;&gt;Startup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="b7e5df">  <td>20/04/23 23:04:09</td>   <td>66694</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterclass()[pri:0, instance:execution.CustomerTest@37918c79]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/23 23:03:34</td>   <td>30815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerTest.withFirstSetOfData()[pri:1, instance:execution.CustomerTest@37918c79]">withFirstSetOfData</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="61c7e3">  <td>20/04/23 23:03:56</td>   <td>53293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerTest.withSecondSetOfData()[pri:2, instance:execution.CustomerTest@37918c79]">withSecondSetOfData</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
 </table>
